open-btn color transparent on ios safari - fix

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -178,8 +178,9 @@ input[type="number"] {
 }
 
 .open-btn {
+  background-color: $almostWhite;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-60%);
   height: 30px;
   width: auto;
   &:hover {
